added mobile view styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+
+    <script
+      src="https://kit.fontawesome.com/4274d2b2e7.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./style.css" />
 
     <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
@@ -45,7 +50,7 @@
             <div class="feature-image">
               <img src="./images/icon-access-anywhere.svg" alt="icon access anywhere" />
             </div>
-            <h3 class="title">Get Started Access your files, anywhere</h3>
+            <h3 class="title">Access your files, anywhere</h3>
             <p class="text">
               The ability to use a smartphone, tablet, or computer to access your account
               means your files follow you everywhere.
@@ -54,7 +59,7 @@
 
           <div class="feature">
             <div class="feature-image">
-              <img src="./images/icon-access-anywhere.svg" alt="icon access anywhere" />
+              <img src="./images/icon-security.svg" alt="icon security" />
             </div>
             <h3 class="title">Security you can trust</h3>
             <p class="text">
@@ -94,10 +99,13 @@
             <h2 class="title">Stay productive, wherever you are</h2>
             <p class="text">
               Never let location be an issue when accessing your files. Fylo has you
-              covered for all of your file storage needs. Securely share files and folders
-              with friends, family and colleagues for live collaboration. No email
-              attachments required.
+              covered for all of your file storage needs.
             </p>
+            <p class="text">
+              Securely share files and folders with friends, family and colleagues for
+              live collaboration. No email attachments required.
+            </p>
+
             <a href="#" class="link"
               >See how Fylo works
               <img class="arrow-img" src="./images/icon-arrow.svg" alt=""
@@ -156,8 +164,8 @@
         </section>
 
         <section class="section-cta">
-          <h2 class="title title--msmall">Get early access today</h2>
-          <p class="text text--small">
+          <h2 class="title">Get early access today</h2>
+          <p class="text">
             It only takes a minute to sign up and our free starter tier is extremely
             generous. If you have any questions, our support team would be happy to help
             you.
@@ -177,23 +185,21 @@
 
           <section class="section-grid-bis">
             <div class="col">
-              <div class="divider">
-                <div class="icon-area">
-                  <img class="icon-img" src="./images/icon-location.svg" alt="" />
-                  <p class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua
-                  </p>
-                </div>
+              <div class="icon-area">
+                <img class="icon-img" src="./images/icon-location.svg" alt="" />
+                <p class="text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua
+                </p>
               </div>
             </div>
 
             <div class="col">
-              <div class="divider">
+              <div class="icon-area">
                 <img class="icon-img" src="./images/icon-phone.svg" alt="" />
                 <p class="text">+1-543-123-4567</p>
               </div>
-              <div class="divider">
+              <div class="icon-area">
                 <img class="icon-img" src="./images/icon-email.svg" alt="" />
                 <p class="text">example@fylo.com</p>
               </div>
@@ -240,7 +246,7 @@
           </section>
         </div>
 
-        <div class="footer-container">
+        <div class="footer-signature">
           <p class="attribution">
             Challenge by
             <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
