added quote image to the quote card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 
         <section class="section-cards">
           <div class="card">
+            <img src="./images/bg-quotes.png" alt="" class="card-quote-img" />
+
             <p class="text">
               Fylo has improved our team productivity by an order of magnitude. Since
               making the switch our team has become a well-oiled collaboration machine.
